Add restriction components for various natural parks with visiting guidelines (demo)