@@ -1,51 +1,75 @@
 package com.gestion.backend.controller;
 
 import java.io.BufferedReader;
-import java.io.IOException;
 import java.io.InputStreamReader;
+import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+
 @RestController
+@RequestMapping("/api")
 public class ScriptController {
 
-    // Endpoint para ejecutar el script Python
     @GetMapping("/ejecutar-script")
-    public String ejecutarScript() {
-        /* TORRE: "d:/Escritorio/TrabajoFinDeGrado/Proyecto_TFG/TFG_backend/src/scripts/CheckRoute.py"*/
-        /* PORTATIL: "C:/Users/HP/Desktop/TrabajoFinDeGrado/Proyecto_TFG/TFG_backend/src/scripts/CheckRoute.py" */
+public List<String> ejecutarScript() {
+    String pythonPath = "python";  // O "python3" dependiendo de tu configuración
+    String scriptPath = "src/scripts/CheckRoute.py";
 
-        String scriptPath = "src/scripts/CheckRoute.py";
-        
-        try {
-            // Configura el comando para ejecutar el script
-            /* TORRE: "C:/Users/Alberto Cámara/AppData/Local/Microsoft/WindowsApps/python3.11.exe" */
-            /* PORTATIL: "C:/Users/HP/AppData/Local/Microsoft/WindowsApps/python3.11.exe" */
-            ProcessBuilder processBuilder = new ProcessBuilder("python3.11.exe", scriptPath);
-            processBuilder.redirectErrorStream(true);
+    try {
+        // Ejecuta el script de Python
+        Process process = Runtime.getRuntime().exec(pythonPath + " " + scriptPath);
 
-            // Ejecuta el script
-            Process process = processBuilder.start();
+        // Lee la salida del script
+        BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+        StringBuilder output = new StringBuilder();
+        String line;
+        while ((line = reader.readLine()) != null) {
+            output.append(line);
+        }
 
-            // Lee la salida del script
-            BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
-            StringBuilder output = new StringBuilder();
-            String line;
-            while ((line = reader.readLine()) != null) {
-                output.append(line).append("\n");
-            }
+        // Obtiene la salida como un string
+        String jsonOutput = output.toString().trim();
+        System.out.println("Salida del script Python: " + jsonOutput);  // Imprime la salida del script para depuración
 
-            // Espera a que el script termine
-            int exitCode = process.waitFor();
-            if (exitCode == 0) {
-                return output.toString(); // Devuelve la salida del script
-            } else {
-                return "Hubo un error al ejecutar el script Python. Código de salida: " + exitCode + "\nSalida del script: " + output.toString();
-            }
+        // Verifica si la salida es vacía
+        if (jsonOutput.isEmpty()) {
+            System.out.println("La salida del script está vacía.");
+            return List.of("No se encontraron parques.");
+        }
 
-        } catch (IOException | InterruptedException e) {
-            return "Error al ejecutar el script: " + e.getMessage(); // Mensaje si ocurre una excepción
+        // Deserializa el JSON en un objeto Java
+        ObjectMapper objectMapper = new ObjectMapper();
+        ParksResponse parksResponse = objectMapper.readValue(jsonOutput, ParksResponse.class);
+
+        // Limpia las comillas adicionales alrededor de los nombres de los parques
+        List<String> cleanedParks = parksResponse.getParks().stream()
+                                                  .map(park -> park.replace("\"", ""))  // Eliminar las comillas
+                                                  .collect(Collectors.toList());
+
+        return cleanedParks;
+    } catch (Exception e) {
+        // Manejo de excepciones
+        System.out.println("Error al ejecutar el script: " + e.getMessage());
+        e.printStackTrace();
+        return List.of("Error al ejecutar el script");
+    }
+}
+
+    // Clase interna para deserializar la respuesta JSON
+    public static class ParksResponse {
+        private List<String> parks;
+
+        public List<String> getParks() {
+            return parks;
+        }
+
+        public void setParks(List<String> parks) {
+            this.parks = parks;
         }
     }
 }
